--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^1.1.2"
+    "react-table": "^7.8.0",
+    "styled-components": "^5.3.6",
+    "web-vitals": "^1.1.2",
+    "bootstrap": "^5.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
